# turing-machine-simulator

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  interface.py  linker.py  main.py  modifier.py  reader.py  turing.py
src/turingsim/: io.py  main.py  reader.py  tui.py  turing.py  utils.py
src/turingsim/core/: Tapes.py  TuringMachine.py
src/turingsim/interface/: Tui.py
src/turingsim/utils/: reader.py
src/turingsim_backup/: __init__.py  interface.py  main.py  modifier.py
tests/: test_linker.py  test_opti.py  test_reader.py  test_steps.py
tests/code_test/: TEST_LINKER_Copy.tur  TEST_LINKER_Copy_Erase.tur  TEST_LINKER_Left.tur  TEST_LINKER_No.tur  TEST_OPTI.tur  TEST_READER_DOUBLONS.tur  TEST_READER_HEADER.tur  TEST_READER_NBR.tur  TEST_READER_Ok.tur  TEST_READER_TRANSITION.tur  TEST_STEPS.tur  TEST_STEPS_etoile.tur  TEST_STEPS_pourcent.tur
turs/: COPY.tur  COPY12 copy.tur  Capipi.tur  ERASE.tur  LEFT.tur  RIGHT.tur  SEARCH.tur  TEST_LINKER.tur  TRI_BINAIRE.tur  egypte.tur  elm.tur  fe.tur
